k8s/base/ate-router.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: no-scale-route
  namespace: kagent
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello1
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: hello1.ate-golden.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /hello2
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: hello2.ate-golden.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /hello3
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: hello3.ate-golden.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /hello4
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: hello4.ate-golden.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
