k8s/base/http-route-scale.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-scale
  namespace: kagent
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /scale
          headers:
            - name: Agent
              value: dummy11
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: dummy11.scale.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /scale
          headers:
            - name: Agent
              value: dummy12
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: dummy12.scale.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
