k8s/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: kagent
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /no-scale
          headers:
            - name: Agent
              value: dummy1
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: dummy1.no-scale.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /no-scale
          headers:
            - name: Agent
              value: dummy2
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: dummy2.no-scale.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /no-scale
          headers:
            - name: Agent
              value: dummy3
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: dummy3.no-scale.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
    - matches:
        - path:
            type: PathPrefix
            value: /no-scale
          headers:
            - name: Agent
              value: dummy4
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: dummy4.no-scale.actors.resources.substrate.ate.dev
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: atenet-router-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
